@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods


class Operation {
}

class Item {
}

class Machine {
    float time
}

Machine "1" -- "1" Operation : has >
Machine "*" -- "1" Item : makes >


@enduml